log/build_2021-06-01_11-19-48/inv_kinematics_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp: In constructor ‘Platform1Vel::Platform1Vel()’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp:15:23: error: ‘Platform1VelServer’ has not been declared
   15 |     "platform1_vel", &Platform1VelServer::send_vel);
      |                       ^~~~~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp: In member function ‘void Platform1Vel::send_vel(std::shared_ptr<interfaces::srv::PlatformVel_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::PlatformVel_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel.cpp:47:6: error: ‘publisher_M1’ was not declared in this scope
   47 |      publisher_M1->publish(vel_M1);
      |      ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/platform1_vel.dir/build.make:63: CMakeFiles/platform1_vel.dir/src/platform1_vel.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform1_vel.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
